--- a/app/views/devices/_device_tabs.html.erb
+++ b/app/views/devices/_device_tabs.html.erb
@@ -2,7 +2,7 @@
   
 </div>
 <div role="tabpanel" class="tab-pane" id="mqttclient">
- 
+  <%= render partial: 'mqtt_client'  %>
 </div>
 <div role="tabpanel" class="tab-pane active" id="management">
   <%= render partial: 'management_device'  %>
