--- a/app/views/devices/_mqtt_client.html.erb
+++ b/app/views/devices/_mqtt_client.html.erb
@@ -1,79 +1,63 @@
 <div class="row">
-  <div class="col-xs-12 col-sm-12">
+  <div class="col-md-12 col-sm-12">
     <div class="panel-box">
-      <div class="panel-head">
-        <h2>MQTT Broker</h2>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-12">
-          <div class="MQTT-Client-form">
-            <%= form_for device.mqtt_broker, url: "/devices/#{device.id}/connect", method: 'POST', html: {class: 'mqtt-form', id: 'mqtt_frm'} do |f| %>
-              <%= hidden_field_tag "mqtt_broker[client_id]", device.client_id %>
-              <%= hidden_field_tag "mqtt_broker[topic]", device.topic %>
-              <div class="form-group">
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" data-toggle="tab" href="#mqtt">MQTT Broker</a>
+        </li>
+     </ul>
+      <div class="tab-content">
+        <div id="mqtt" class="container tab-pane active"><br>
+          <%= form_tag("/mqtt_connection/connect", method: "get") do %>
+           <div class="form-group">
                 <div class="row">
-                  <div class="col-lg-6 col-md-12 col-sm-12 mb-xs-15">
-                    <%= f.text_field :host, class: 'form-control mqtt-pd', placeholder: "URL" %>
+                  <div class="col-md-3">
+                   
+                    <input class="form-control url" placeholder="URL" type="text" id="url">
+                    <span id="inputtext" class="clearBtn" style="float: left;"></span>
                   </div>
-                  <div class="col-lg-6 col-md-12 col-sm-12 mb-xs-15">
-                    <%= f.text_field :port, class: 'form-control mqtt-pd', placeholder: "PORT" %>
+                  <div class="col-md-3">
+                    
+                    <input class="form-control port" placeholder="PORT" type="text" id="port">
+                    <span id="inputtext" class="clearBtn" style="float: left;"></span>
                   </div>
-                  <div class="col-lg-6 col-md-12 col-sm-12 mb-xs-15">
-                    <%= f.text_field :username, class: 'form-control mqtt-pd', placeholder: "User" %>
-                  </div>
-                  <div class="col-lg-6 col-md-12 col-sm-12 mb-xs-15">
-                    <%= f.password_field :password, class: 'form-control mqtt-pd', placeholder: "Password" %>
-                  </div>
+                   <div class="col-md-3">
+<button>check</button>
+                      
+                   </div>
+                    <div class="col-md-3">
+                        <%= button_to 'Disconnect', create_device_path, method: :get, remote: true,class: "btn disconnect device-submit btn-right" %>
+                    </div>
                 </div>
-              </div>
-              <input type="hidden" id='conn_type'/>
+            </div> 
             <% end %>
-          </div>
-        </div>
-        <div class="col-md-6 col-sm-6 col-xs-12">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="buttons">
-                <div class="disconnnect-button dbtn">
-                  <div class="desable-button">
-                    <%= link_to '', onclick: "connectMqtt_device($(this))", 'data-id' => device.id, remote: true do %>
-                      <span class="c-btn-icn">
-                        <img src="../assets/wifi-disconnect.png" alt="...">
-                      </span>
-                      <span class="c-btn-txt">disconnect</span>
-                    <% end %>
-                  </div>
-                </div>
-                <div class="connnect-button dbtn">
-                  <div class="desable-button">
-                    <%= link_to '', onclick: "connectMqtt_device($(this))", class: 'device-connect', 'data-id' => device.id, remote: true do %>
-                      <span class="c-btn-icn"><img src="../assets/wifi-connect.png" alt=".">
-                      </span>
-                      <span class="c-btn-txt">connect</span>
-                    <% end %>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <h4>Status</h4>
-              <div class="status">
-                <div class="status-area status-center">
-                  <h2>
-                    <% if device.mqtt_broker.connected %>
-                      Connected
-                    <% else %>
-                      Disconnected
-                    <% end %>
-                  </h2>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<%= render partial: 'devices/device_message', locals: {device: @device, message: @message, topic: @topic} %>
+<script type="text/javascript">
+function vald(){
+          port = $('.port').val();
+          url = $('.url').val();
+      $.ajax({
+                  url: "/mqtt_connection/connect",
+                  type:"get",
+                  dataType: "json",
+                  data:{
+                      status: true,
+                      port: port,
+                       url:url
+                    
+                  },
+                  success: function(response) {
+                                  $('#myid1').hide();
+                  $('#myid2').show();
+                  }
+              });
+   
 
+   
+   }
+   
+</script>
