ui is changed done and added the mqtt functionality

--- a/app/views/mqtt/mqtt_connection/subscribe.js.erb
+++ b/app/views/mqtt/mqtt_connection/subscribe.js.erb
@@ -1,1 +1,1 @@
-$('#mqttclient').html("<%= escape_javascript(render :partial => '/devices/mqtt_client') %>");
+$('.subscribe_message_board').html("<%= escape_javascript(render :partial => '/devices/subscribe_table', locals: {publish_message: @publish_message,subscribe_topic: @subscribe_topic}) %>");
