--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,8 +125,8 @@ input.form-control {
     height: 48px;
     background-color: transparent;
     border: 0;
-    border-bottom: 1px solid #b7b7b7;
-    border-radius: 0;
+    border: 1px solid #b7b7b7;
+    border-radius: 30px;
     -webkit-box-shadow: none;
     box-shadow: none;
     font-size: 15px;
@@ -190,8 +190,8 @@ input.form-control {
     height: 48px;
     background-color: transparent;
     border: 0;
-    border-bottom: 1px solid #b7b7b7;
-    border-radius: 0;
+    border: 1px solid #b7b7b7;
+    border-radius: 30px;
     -webkit-box-shadow: none;
     /* box-shadow: none; */
     /* font-size: 15px; */
