--- a/app/views/devices/_management_device.html.erb
+++ b/app/views/devices/_management_device.html.erb
@@ -1,3 +1,4 @@
+<div id="user">
 <div class="row">
   <div class="col-md-12 col-sm-12">
     <div class="panel-box">
@@ -21,4 +22,4 @@
     </div>
   </div>
 </div>
-
+</div>
