--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -9,7 +9,12 @@
             <li class="userdp dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <span class="user-profile">
-                      <img src="/images/missing_user.png" alt="Missing user">
+                      
+                      <% if current_user.avatar.url(:thumb) == "/assets/missing_device.png" %>
+                        <img src="/images/missing_user.png" alt="Missing user">
+                      <% else %>
+                       <%= image_tag(current_user.avatar.url(:thumb)) %>
+                       <% end %>
                     </span>
                     <b class="caret"></b>
                 </a>
