--- a/app/views/session/_edit.html.erb
+++ b/app/views/session/_edit.html.erb
@@ -75,13 +75,13 @@
 
 
 
-									<!-- <div class="col-xs-12 col-sm-6">
+									<div class="col-xs-12 col-sm-6">
 										 <div class="pull-left">
 											 <div class="title-label">Profile Picture </div>
 									 </div>
- -->
 
-										 <!-- <div class="imageupload">
+
+										 <div class="imageupload">
 											 <div class="file-tab panel-body">
 
 											 <label class="btn btn-default btn-file">
@@ -91,8 +91,8 @@
 											 </label>
 											 <button type="button" class="btn btn-default">Remove</button>
 										 </div>
-									 </div> -->
-									<!-- </div> -->
+									 </div>
+									</div>
 
 									 <div class="col-xs-12">
 									    <div class="form-group">
