--- a/app/views/devices/_mqtt_publication_tab.html.erb
+++ b/app/views/devices/_mqtt_publication_tab.html.erb
@@ -17,7 +17,7 @@
                 <div class="col-md-7">
                   <%= f.text_field :topic, class: 'form-control', placeholder: 'Topic', required: true %>
                 </div>
-                <div class="col-md-4 submit-show" style="padding-right: 12%">
+                <div class="col-md-4 publish-show" style="padding-right: 12%">
                   <%= f.submit "Publish" ,class: "btn connect publish btn-right" %>
                 </div>
                 <div class="row">
