--- a/app/views/devices/_mqtt_client_tab.html.erb
+++ b/app/views/devices/_mqtt_client_tab.html.erb
@@ -35,7 +35,7 @@
               </div>
             </div> 
           <% end %>
-          <%= link_to 'Get Last Message', get_data_mqtt_connection_index_path, method: :get, remote: true,class: "btn submit-btn-green", style: "margin-top: 20px; float: right" %>
+          <%#= link_to 'Get Last Message', get_data_mqtt_connection_index_path, method: :get, remote: true,class: "btn submit-btn-green", style: "margin-top: 20px; float: right" %>
         </div>
       </div>
     </div>
