--- a/app/views/devices/_device_tabs.html.erb
+++ b/app/views/devices/_device_tabs.html.erb
@@ -1,8 +1,8 @@
 <div role="tabpanel" class="tab-pane " id="globalview">
-	<%= render partial: 'global_view' %>
 </div>
 <div role="tabpanel" class="tab-pane" id="mqttclient">
-  <%= render partial: 'mqtt_client' %>
+	<%= render partial: 'global_view' %>
+  <%#= render partial: 'mqtt_client' %>
 </div>
 <div role="tabpanel" class="tab-pane active" id="management">
   <%= render partial: 'management_device' %>
