--- a/app/views/devices/_device_tabs.html.erb
+++ b/app/views/devices/_device_tabs.html.erb
@@ -1,7 +1,8 @@
 <div role="tabpanel" class="tab-pane " id="globalview">
 </div>
 <div role="tabpanel" class="tab-pane" id="mqttclient">
-	<%= render partial: 'global_view' %>
+	<%= render partial: 'devices/monitor_tab' %>
+	<%#= render partial: 'global_view' %>
   <%#= render partial: 'mqtt_client' %>
 </div>
 <div role="tabpanel" class="tab-pane active" id="management">
