--- a/app/views/devices/_device_tabs.html.erb
+++ b/app/views/devices/_device_tabs.html.erb
@@ -1,4 +1,5 @@
 <div role="tabpanel" class="tab-pane " id="globalview">
+	<%= render partial: 'devices/actuator_tab' %>
 </div>
 <div role="tabpanel" class="tab-pane" id="mqttclient">
 	<%= render partial: 'devices/monitor_tab' %>
