--- a/app/views/devices/_actuator_view.html.erb
+++ b/app/views/devices/_actuator_view.html.erb
@@ -71,47 +71,47 @@
     for(i = 1; i <= device_count; i++ ){
       value = parseInt(value, 10); // Convert to an integer
       if (value === 1) {
-        $(".id-"+i).children(".r1").children(".span1").text('Yes');
+        $(".id-"+i).children(".r1").children(".span1").text('On');
       } else if (value === 2) {
         $(".id-"+i).children(".r1").children(".span1").text('X');
       } else if (value === 3) {
-        $(".id-"+i).children(".r1").children(".span1").text('No');
+        $(".id-"+i).children(".r1").children(".span1").text('Off');
       }else if (value === 4) {
-        $(".id-"+i).children(".r2").children(".span2").text('Yes');
+        $(".id-"+i).children(".r2").children(".span2").text('On');
       } else if (value === 5) {
         $(".id-"+i).children(".r2").children(".span2").text('X');
       } else if (value === 6) {
-        $(".id-"+i).children(".r2").children(".span2").text('No');
+        $(".id-"+i).children(".r2").children(".span2").text('Off');
       }else if (value === 7) {
-        $(".id-"+i).children(".r3").children(".span3").text('Yes');
+        $(".id-"+i).children(".r3").children(".span3").text('On');
       } else if (value === 8) {
         $(".id-"+i).children(".r3").children(".span3").text('X');
       } else if (value === 9) {
-        $(".id-"+i).children(".r3").children(".span3").text('No');
+        $(".id-"+i).children(".r3").children(".span3").text('Off');
       }else if (value === 10) {
-        $(".id-"+i).children(".r4").children(".span4").text('Yes');
+        $(".id-"+i).children(".r4").children(".span4").text('On');
       } else if (value === 11) {
         $(".id-"+i).children(".r4").children(".span4").text('X');
       } else if (value === 12) {
-        $(".id-"+i).children(".r4").children(".span4").text('No');
+        $(".id-"+i).children(".r4").children(".span4").text('Off');
       }else if (value === 13) {
-        $(".id-"+i).children(".r5").children(".span5").text('Yes');
+        $(".id-"+i).children(".r5").children(".span5").text('On');
       } else if (value === 14) {
         $(".id-"+i).children(".r5").children(".span5").text('X');
       } else if (value === 15) {
-        $(".id-"+i).children(".r5").children(".span5").text('No');
+        $(".id-"+i).children(".r5").children(".span5").text('Off');
       }else if (value === 16) {
-        $(".id-"+i).children(".r6").children(".span6").text('Yes');
+        $(".id-"+i).children(".r6").children(".span6").text('On');
       } else if (value === 17) {
         $(".id-"+i).children(".r6").children(".span6").text('X');
       } else if (value === 18) {
-        $(".id-"+i).children(".r6").children(".span6").text('No');
+        $(".id-"+i).children(".r6").children(".span6").text('Off');
       }else if (value === 19) {
-        $(".id-"+i).children(".r7").children(".span7").text('Yes');
+        $(".id-"+i).children(".r7").children(".span7").text('On');
       } else if (value === 20) {
         $(".id-"+i).children(".r7").children(".span7").text('X');
       } else if (value === 21) {
-        $(".id-"+i).children(".r7").children(".span7").text('No');
+        $(".id-"+i).children(".r7").children(".span7").text('Off');
       }
     }
   }
