--- a/app/views/devices/_actuator_view.html.erb
+++ b/app/views/devices/_actuator_view.html.erb
@@ -70,7 +70,7 @@
   for(i=1;i<=device_count;i++){
     $(".id-"+i).on("click",function(){
       $("#RangeFilter,#RangeFilter1,#RangeFilter2,#RangeFilter3,#RangeFilter4,#RangeFilter5,#RangeFilter6").on("change",function(){
-        $(".id-"+i).css({"background-color": "yellow", "font-size": "200%"});
+        $(this).closest("td").css({"background-color": "#D3D3D3"});
         if($(this).val() === "1"){
           $(this).next("span").text("On")
         }else if($(this).val() === "2"){
