--- a/app/views/devices/_actuator_publish_table.html.erb
+++ b/app/views/devices/_actuator_publish_table.html.erb
@@ -1,3 +1,10 @@
+<%if @notice == "Message send successfully"%>
+  <p class="alert alert-success notice"><%=@notice%></p>
+<%elsif @notice == "Please check your connection message not send"%>
+  <p class="alert alert-warning notice"><%=@notice%></p>
+<%else%>
+
+<%end%>
 <table id= "table-data" style="margin-top: 5%"  class="table table-condensed table-striped table-bordered nowrap" width="100%">
   <thead>
     <tr>
@@ -16,3 +23,6 @@
     <% end %>
   </tbody>
 </table>
+<script type="text/javascript">
+   $(".notice").fadeOut(5000);
+</script>
