button not working issue resolved

--- a/app/views/mqtt/mqtt_connection/connect.js.erb
+++ b/app/views/mqtt/mqtt_connection/connect.js.erb
@@ -1,1 +1,1 @@
-$('#mqttclient').html("<%= escape_javascript(render :partial => '/devices/mqtt_client') %>");
+$('#management').html("<%= escape_javascript(render :partial => '/devices/mqtt_client') %>");
