edit user profile bug resolved

--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -20,7 +20,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-user">
                     <li>
-                      <%= link_to " User Profile", edit_session_path(current_user.id) ,  remote: true , :class => "fa fa-user fa-fw" %>
+                      <%= link_to " User Profile", edit_session_path(current_user.id) , :class => "fa fa-user fa-fw" %>
                     </li>
                     <!-- <li>
                         <a href="#">
